--- a/study/build.gradle
+++ b/study/build.gradle
@@ -26,24 +26,38 @@ repositories {
 
 dependencies {
 
+	// SPRING
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
 	// JPA
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
 	// THYMELEAF
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
 	// WEBSOCKET
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
+	// LOMBOK
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	// MYSQL
+	runtimeOnly 'com.mysql:mysql-connector-j'
+
+	// MONGO 
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+
+	// Swagger
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
+
+	// TEST
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	
 	// JUNIT
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-	// Swagger
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
+
 }
 
 tasks.named('test') {
