--- a/study/src/main/resources/application.yml
+++ b/study/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+  data:
+    mongodb:
+      uri: mongodb://root:1234@cluster.ergif.mongodb.net/webSocket_chat?retryWrites=true&w=majority
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/websocket_study?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
@@ -8,7 +11,7 @@ spring:
   jpa:
     open-in-view: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate.format_sql: true
