--- a/study/src/main/resources/application.yml
+++ b/study/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   data:
     mongodb:
-      uri: mongodb://root:1234@cluster.ergif.mongodb.net/webSocket_chat?retryWrites=true&w=majority
+      uri: mongodb://127.0.0.1:27017/websocket_study
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/websocket_study?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
@@ -11,10 +11,11 @@ spring:
   jpa:
     open-in-view: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
     properties:
-      hibernate.format_sql: true
+      hibernate:
+        #format_sql: true
       dialect: org.hibernate.dialect.MySQL8InnoDBDialect
 
 springdoc:
